--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -20,7 +20,7 @@
   {% endif %}
   {% if site.twitter_username %}
   <li>
-    <a href="https://twitter.com/{{ site.twitter_username }}">
+    <a href="https://ooo.0x0.ooo/2025/01/20/OGzJNC.jpg">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -30,7 +30,7 @@
   {% endif %}
   {% if site.zhihu_username %}
   <li>
-    <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
+    <a target="_blank" href="https://ooo.0x0.ooo/2025/01/20/OGzJNC.jpg">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa  fa-stack-1x fa-inverse">知</i>
@@ -50,7 +50,7 @@
   {% endif %}
   {% if site.facebook_username %}
   <li>
-    <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
+    <a target="_blank" href="https://ooo.0x0.ooo/2025/01/20/OGzJNC.jpg">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -60,7 +60,7 @@
   {% endif %}
   {% if site.github_username %}
   <li>
-    <a target="_blank" href="https://github.com/{{ site.github_username }}">
+    <a target="_blank" href="https://github.com/leihuidi/">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
